Fix incorrect collapse icon position when sider in the right

--- a/components/layout/style/index.less
+++ b/components/layout/style/index.less
@@ -110,6 +110,14 @@
         &:hover {
           background: tint(@layout-sider-background, 10%);
         }
+
+        &-left {
+          right: -@layout-zero-trigger-width;
+        }
+
+        &-right {
+          left: -@layout-zero-trigger-width;
+        }
       }
     }
   }
